# MutatoR

./: .RData  .gitignore  CMakeLists.txt  DESCRIPTION  LICENSE  LICENSE.md  Makefile  MutationTestRunner.R  NAMESPACE  README.md  a.out  log.txt  main.cpp  mutateR.cpp  mutatoR.R  output.txt
R/: mutatoR.R  mutatoRpackage.R  sample.R  test_sample.R
R/mutations/: mutated_001.R  mutated_002.R  mutated_003.R  mutated_004.R  mutated_005.R  mutated_006.R  mutated_007.R
R/sample/: data_cleaning.R  sample.R  sample_reduced.R  test_sample.R  (+1 more)
cpp_tests/: ASTHandlerTest  ASTHandlerTest.cpp  Makefile  MutatorTest  MutatorTest.cpp  mutateRTest  mutateRTest.cpp  output.txt
include/: Mutator.hpp
man/: operators.Rd
sample/: sample.R  test_data_cleaning.R
src/: ASTHandler.cpp  ASTHandler.hpp  AndOperator.cpp  AndOperator.hpp  ArithmeticOperator.hpp  ComparisonOperator.hpp  DeleteOperator.cpp  DeleteOperator.hpp  DivideOperator.cpp  DivideOperator.hpp  EqualOperator.cpp  EqualOperator.hpp  LessThanOperator.cpp  LessThanOperator.hpp  LessThanOrEqualOperator.cpp  LessThanOrEqualOperator.hpp  LogicalAndOperator.cpp  LogicalAndOperator.hpp  LogicalOperator.hpp  LogicalOrOperator.cpp  LogicalOrOperator.hpp  Makefile  MinusOperator.cpp  MinusOperator.hpp  MoreThanOperator.cpp  MoreThanOperator.hpp  MoreThanOrEqualOperator.cpp  MoreThanOrEqualOperator.hpp  MultiplyOperator.cpp  MultiplyOperator.hpp  Mutator.cpp  Mutator.hpp  NotEqualOperator.cpp  NotEqualOperator.hpp  Operator.cpp  OrOperator.cpp  OrOperator.hpp  PlusOperator.cpp  PlusOperator.hpp  init.c  (+2 more)
tests/: testthat.R
(+11 files in other folders)
